manifests/core/tetragon/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tetragon
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
